2003-08-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UrlUtils.cs: made Reduce work when a "/" is passed.

2003-05-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UrlUtils.cs: fixed Combine and reworked Reduce.

2003-03-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UrlUtils.cs: another little fix in Combine ().

2003-01-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UrlUtils.cs: fixed Combine ().

2002-12-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UrlUtils.cs: fixed IsRelativeUrl and IsRootUrl.

2002-12-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* PathUtil.cs: removed.
	* UrlUtils.cs: fixed Combine to handle '~'.

2002-12-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* PathUtil.cs: some path handling methods that are not available in
	System.IO.Path.

2002-10-28      Gaurav Vaish <gvaish_mono@lycos.com>

	* DataSourceHelper.cs       : Fresh implementation. Moved from
	                      System.Web.UI.WebControls.DataGrid
	                      ::ResolveData(object, string).

2002-10-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebTrace.cs: fixed namespace.

	* WebEncoding.cs: new class that holds the default encoding for
	System.Web.

2002-01-03  Nick Drochak  <ndrochak@gol.com>

	* FileChangesMonitor.cs: remove redundant using statement; use int
	for MAXLEN; capitalize correctly 'WebHashCodeProvider';
	fix typo rsLock -> rwLock; Change IsRooted to IsPathRooted;
	set out parameter value where needed
	* FilePathParser.cs: qualify method GetPathRoot() with 'Path.'
	* IISVersionInfo.cs: initialize static member to avoid compile error.
	* WebEqualComparer.cs: static member defC shouldn't be readonly;
	the string comparer had some typos (fixed)
	* WebHashCodeProvider.cs: needed System.Globalization; static member
	defHcp shouldn't be readonly; remove double equal typo.

2002-01-02  Nick Drochak  <ndrochak@gol.com>

	* FileAction.cs: Use 0x7FFFFFFF as enum value for error.  0xFFFFFFFF
	is too big for Int32.